test/analyze/name_resolution/duplicate_pattern_names_error.exp
Error: Name `x` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:7:10
 7 |   val (x, x) = 1;
   |           ^

Error: Name `x` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:8:10
 8 |   val (x, x, x, x) = 1;
   |           ^

Error: Name `x` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:8:13
 8 |   val (x, x, x, x) = 1;
   |              ^

Error: Name `x` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:8:16
 8 |   val (x, x, x, x) = 1;
   |                 ^

Error: Name `x` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:9:16
 9 |   val (x, y, z, x) = 1;
   |                 ^

Error: Name `field2` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:10:33-39
 10 |   val Rec { field1: (x, field2), field2, field3: x } = 1;
    |                                  ^^^^^^

Error: Name `x` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:10:49
 10 |   val Rec { field1: (x, field2), field2, field3: x } = 1;
    |                                                  ^

Error: Name `y` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:13:6
 13 |   (y, y) = 1;
    |       ^

Error: Name `y` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:14:7
 14 |   (y, (y, y)) = 1;
    |        ^

Error: Name `y` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:14:10
 14 |   (y, (y, y)) = 1;
    |           ^

Error: Name `x` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:23:10
 23 |     | (x, x) -> ()
    |           ^

Error: Name `x` already bound in pattern
test/analyze/name_resolution/duplicate_pattern_names_error.myte:27:18
 27 |     | (1, (x, (1, x))) -> ()
    |                   ^